--- a/kubernetes/eups-service.yaml
+++ b/kubernetes/eups-service.yaml
@@ -8,14 +8,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: eups
-  labels:
-    name: eups
+  name: &name eups
+  labels: &labels
+    name: *name
+    app: eups
 spec:
   ports:
     - name: http
       port: 80
       targetPort: eups-apache
       protocol: TCP
-  selector:
-    name: eups
+  selector: *labels
