--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,20 @@ matrix:
         - docker
       script: ./tests/mdl.sh
 
-    - env: TEST=make
-      language: c
-      script: ./tests/make.sh
-
     - env: TEST=terraform
-      language: c
-      script: |
-       set -e
-       cd tf
-       make test
+      services:
+        - docker
+      script: cd tf; ../tests/terraform.sh
+
+    - env: TEST=yamllint
+      services:
+        - docker
+      script: ./tests/yamllint.sh
+
+    - env: TEST=shellcheck
+      services:
+        - docker
+      script: ./tests/shellcheck.sh
 
     - env: TEST=hadolint
       language: c
@@ -26,17 +30,9 @@ matrix:
         - docker
       script: ./tests/hadolint.sh
 
-    - env: TEST=yamllint
+    - env: TEST=make
       language: c
-      services:
-        - docker
-      script: ./tests/yamllint.sh
-
-    - env: TEST=shellcheck
-      language: c
-      services:
-        - docker
-      script: ./tests/shellcheck.sh
+      script: ./tests/make.sh
 branches:
   only:
     - master
